# psn

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: codecov.yml  dependabot.yml
.github/workflows/: linux.yml  rust.yml
packaging/archlinux/: .SRCINFO  PKGBUILD
packaging/gentoo/app-misc/lsu/: Manifest  psn-9999.ebuild
packaging/gentoo/app-misc/psn/: Manifest  metadata.xml  psn-9999.ebuild
packaging/nix/: default.nix
src/: app.rs  cli.rs  debug_tui.rs  lib.rs  main.rs  model.rs  process.rs  runtime.rs  signal.rs  terminal.rs  tree.rs  ui.rs
tests/: app_tests.rs  bin_cli_tests.rs
